# simple-http-server

./: .gitignore  Cargo.toml  README.md
assets/public/: hello.html  index.html  styles.css
scripts/: assets.sh  bootstrap.sh  remote.sh  utilities
src/: lib.rs  main.rs  timeit.rs
src/handler/: default_handler.rs  handler.rs  mod.rs  static_page.rs
src/http/: methods.rs  mod.rs  request.rs  response.rs
src/website/: hyperlink_website.rs  loaded_file.rs  mod.rs  server.rs  static_website.rs
