[package]
name = "simple-http-server"
version = "0.1.0"
edition = "2021"



[profile.dev]
debug = true
opt-level = 3               # Use slightly better optimizations.
overflow-checks = true     # Disable integer overflow checks.
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
debug = true

[dependencies]
itertools = "0.12.0"
anyhow = "1.0.79"
