[package]
name = "simple-http-server"
version = "0.1.0"
edition = "2021"



[profile.dev]
debug = true
opt-level = 0               # Use slightly better optimizations.
overflow-checks = true     # Disable integer overflow checks.
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
debug = false
opt-level = 3               # Use slightly better optimizations.
overflow-checks = false     # Disable integer overflow checks.
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "4.4.18"
chrono = "0.4.32"
csv = "1.3.0"
simple_logger = "4.3.3"
log = "0.4.20"
itertools = "0.12.0"
anyhow = "1.0.79"
serde = { version = "1.0.196", features = ["derive"] }
